welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: illegal start of statement
  else if ((a+b==10) | (a+c==10) | (b+c==10) ) {
  ^